[tool.poetry]
name = "vaccination-appointment-checker"
version = "0.1.0"
description = "Scrapes Walgreens immunization availability website, sending alerts if appointments are available in the configured area"
authors = ["Jacob Mischka <jacob@mischka.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
twilio = "^6.55.0"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
pyTelegramBotAPI = "^3.7.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
